<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background"
    tools:context=".RegisterActivity">


    <ImageView
        android:id="@+id/goback"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:clickable="true"
        android:src="@drawable/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.048"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.117" />

    <RadioGroup
        android:id="@+id/sexe"
        android:layout_width="310dp"

        android:layout_height="36dp"
        android:layout_marginTop="104dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.133">

        <RadioButton
            android:id="@+id/m"
            android:checked="true"
            android:buttonTint="@color/red"
            android:layout_width="wrap_content"
            android:layout_height="39dp"
            android:fontFamily="@font/soda"
            android:text="@string/M"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.14"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            app:layout_constraintVertical_bias="0.105" />

        <RadioButton
            android:id="@+id/mrs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/MRS"
            android:fontFamily="@font/soda"
            android:buttonTint="@color/red"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            app:layout_constraintVertical_bias="0.107" />

        <RadioButton
            android:id="@+id/miss"
            android:layout_width="128dp"
            android:layout_height="wrap_content"
            android:text="@string/MISS"
            android:buttonTint="@color/red"
            android:fontFamily="@font/soda"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.827"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            app:layout_constraintVertical_bias="0.107" />
    </RadioGroup>

    <EditText
        android:id="@+id/Nom"
        android:layout_width="321dp"
        android:layout_height="49dp"
        android:width="250dp"
        android:fontFamily="@font/soda"
        android:drawableStart="@drawable/npr"
        android:drawablePadding="5dp"
        android:background="@drawable/input"
        android:ems="10"
        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ "
        android:hint="@string/Nom"
        android:inputType="textPersonName"
        android:paddingLeft="10dp"


        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.369" />

    <EditText
        android:id="@+id/Prenom"
        android:layout_width="321dp"
        android:layout_height="49dp"
        android:layout_marginTop="26dp"
        android:drawableStart="@drawable/npr"
        android:drawablePadding="5dp"
        android:autofillHints="@string/Prenom"
        android:fontFamily="@font/soda"
        android:background="@drawable/input"
        android:ems="10"
        android:hint="@string/Prenom"
        android:inputType="textPersonName"
        android:paddingLeft="10dp"
        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ "
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.454" />

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="321dp"
        android:layout_height="49dp"
        android:drawableStart="@drawable/date"
        android:drawablePadding="5dp"
        android:background="@drawable/input"
        android:ems="10"
        android:fontFamily="@font/soda"
        android:hint="@string/Birthdate"

        android:paddingLeft="10dp"
        android:paddingTop="13sp"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/Prenom"
        app:layout_constraintVertical_bias="0.202" />

    <EditText
        android:id="@+id/Email"
        android:layout_width="321dp"
        android:layout_height="49dp"
        android:background="@drawable/input"
        android:drawableStart="@drawable/email"
        android:ems="10"
        android:hint="@string/Email"
        android:inputType="textEmailAddress"
        android:drawablePadding="5dp"
        android:paddingLeft="10dp"
        android:fontFamily="@font/soda"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDate"
        app:layout_constraintVertical_bias="0.125" />


    <Button
        android:id="@+id/button"
        android:layout_width="321dp"
        android:layout_height="49dp"
        app:backgroundTint="@color/bottom_nav"
        android:shadowColor="#2196F3"
        android:text="@string/etape_2"
        android:background="@drawable/button"
        android:textColor="@color/white"
        android:fontFamily="@font/soda"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Email"
        app:layout_constraintVertical_bias="0.155"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Déja membre?"
        android:fontFamily="@font/hardy"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.314"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.869" />

    <TextView
        android:id="@+id/signin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Connectez-vous"
        android:clickable="true"
        android:fontFamily="@font/hardy"
        android:textColor="@color/lred"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.058"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.869" />

</androidx.constraintlayout.widget.ConstraintLayout>