<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusableInTouchMode="true"
    android:background="@drawable/background"
    tools:context=".RegisterActivity2">

    <ImageView
        android:id="@+id/goback"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:clickable="true"
        android:src="@drawable/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.048"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.117" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/envoyer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/goback">

        <EditText
            android:id="@+id/cin"
            android:layout_width="300dp"
            android:layout_height="47dp"
            android:layout_marginTop="15dp"
            android:autofillHints="@string/hide_bottom_view_on_scroll_behavior"
            android:background="@drawable/input"
            android:ems="10"
            android:fontFamily="@font/soda"
            android:hint="@string/cin"
            android:inputType="number"
            android:padding="10dp"
            />
        <Spinner
            android:id="@+id/pays"
            android:layout_width="300dp"
            android:layout_height="47dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/input"
            android:fontFamily="@font/soda"
            android:prompt="@string/Pays"
            />

        <EditText
            android:id="@+id/nationality"
            android:layout_width="300dp"
            android:layout_height="47dp"
            android:autofillHints="@string/hide_bottom_view_on_scroll_behavior"
            android:background="@drawable/input"
            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ "
            android:ems="10"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/soda"
            android:hint="Nationalité"
            android:inputType="textPersonName"
            android:padding="10dp"
            app:layout_constraintTop_toBottomOf="@+id/cin"
            tools:layout_editor_absoluteX="45dp" />

        <EditText
            android:id="@+id/adresse"
            android:layout_width="300dp"
            android:layout_height="47dp"
            android:autofillHints="@string/hide_bottom_view_on_scroll_behavior"
            android:background="@drawable/input"
            android:fontFamily="@font/soda"
            android:layout_marginTop="15dp"
            android:hint="Adresse"
            android:inputType="textPostalAddress"
            android:padding="10dp"
            />
        <EditText
            android:id="@+id/codepostal"
            android:layout_width="300dp"
            android:layout_height="47dp"
            android:layout_marginTop="15dp"
            android:autofillHints="@string/hide_bottom_view_on_scroll_behavior"
            android:background="@drawable/input"
            android:ems="10"
            android:fontFamily="@font/soda"
            android:hint="@string/codepostal"
            android:inputType="textPostalAddress"
            android:padding="10dp"
            />

        <EditText
            android:id="@+id/ville"
            android:layout_width="300dp"
            android:layout_height="47dp"
            android:autofillHints="@string/hide_bottom_view_on_scroll_behavior"
            android:background="@drawable/input"
            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ "
            android:ems="10"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/soda"
            android:hint="Ville"
            android:padding="10dp"
            />




        <EditText
            android:id="@+id/teldomicile"
            android:layout_width="300dp"
            android:layout_height="47dp"
            android:layout_marginTop="15dp"
            android:autofillHints="@string/hide_bottom_view_on_scroll_behavior"
            android:background="@drawable/input"
            android:ems="10"
            android:fontFamily="@font/soda"
            android:hint="@string/teldomicile"
            android:inputType="phone"
            android:padding="10dp"
            />

        <EditText
            android:id="@+id/telmobile"
            android:layout_width="300dp"
            android:layout_height="47dp"
            android:layout_marginTop="15dp"
            android:autofillHints="@string/hide_bottom_view_on_scroll_behavior"
            android:background="@drawable/input"
            android:ems="10"
            android:fontFamily="@font/soda"
            android:hint="@string/telmobile"
            android:inputType="phone"
            android:padding="10dp"
            />

        <CheckBox
            android:id="@+id/tos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="j'accepte les conditions d'utilisation"
            android:buttonTint="@color/red"
            android:fontFamily="@font/hardy"
            android:layout_marginTop="15dp" />



    </LinearLayout>

    <Button
        android:id="@+id/envoyer"
        android:layout_width="240dp"
        android:layout_height="50dp"
        android:background="@drawable/button"
        android:fontFamily="@font/soda"
        android:text="Créer"
        android:textColor="@color/white"
        app:backgroundTint="@color/bottom_nav"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.958" />


</androidx.constraintlayout.widget.ConstraintLayout>