<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="5sp"
    android:layout_marginRight="5sp"
    android:layout_marginBottom="5sp"
    android:layout_marginTop="170dp"
    tools:context=".ProfileFragment">


    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/soda"
        android:text="Informations Personnelles"
        android:textColor="@color/lred"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.005" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/soda"
        android:text="Nom"
        android:textColor="@color/ared"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.002"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView16" />

    <EditText
        android:id="@+id/Nom"
        android:layout_width="268dp"
        android:layout_height="44dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/input"
        android:drawableStart="@drawable/npr"
        android:drawablePadding="5dp"
        android:paddingLeft="10dp"
        android:fontFamily="@font/soda"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.786"
        app:layout_constraintStart_toEndOf="@+id/textView18"
        app:layout_constraintTop_toBottomOf="@+id/textView16" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="108dp"
        android:fontFamily="@font/soda"
        android:text="Prenom"
        android:textColor="@color/bred"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView16" />

    <EditText
        android:id="@+id/Prenom"
        android:layout_width="268dp"
        android:layout_height="44dp"
        android:layout_marginTop="108dp"
        android:background="@drawable/input"
        android:drawableStart="@drawable/npr"
        android:drawablePadding="5dp"
        android:fontFamily="@font/soda"
        android:paddingLeft="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.786"
        app:layout_constraintStart_toEndOf="@+id/textView18"
        app:layout_constraintTop_toBottomOf="@+id/textView16" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:fontFamily="@font/soda"
        android:text="D.D.N"
        android:textColor="@color/bred"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView19" />

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="268dp"
        android:layout_height="44dp"
        android:layout_marginTop="52dp"
        android:background="@drawable/input"
        android:drawableStart="@drawable/date"
        android:drawablePadding="5dp"
        android:ems="10"

        android:fontFamily="@font/soda"
        android:hint="@string/Birthdate"
        android:paddingLeft="10dp"
        android:paddingTop="13sp"
        android:textColor="@color/black"

        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.768"
        app:layout_constraintStart_toEndOf="@+id/textView21"
        app:layout_constraintTop_toBottomOf="@+id/Prenom" />

    <RadioGroup
        android:id="@+id/sexe"
        android:layout_width="284dp"

        android:layout_height="35dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.979"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDate"
        app:layout_constraintVertical_bias="0.172">

        <RadioButton
            android:id="@+id/m"
            android:layout_width="wrap_content"
            android:layout_height="39dp"
            android:buttonTint="@color/red"
            android:checked="true"
            android:fontFamily="@font/soda"
            android:text="@string/M"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.14"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            app:layout_constraintVertical_bias="0.105" />

        <RadioButton
            android:id="@+id/mrs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/red"
            android:fontFamily="@font/soda"
            android:text="@string/MRS"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            app:layout_constraintVertical_bias="0.107" />

        <RadioButton
            android:id="@+id/miss"
            android:layout_width="128dp"
            android:layout_height="wrap_content"
            android:buttonTint="@color/red"
            android:fontFamily="@font/soda"
            android:text="@string/MISS"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.827"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            app:layout_constraintVertical_bias="0.107" />
    </RadioGroup>

    <Button
        android:id="@+id/maj"
        android:layout_width="298dp"
        android:layout_height="46dp"
        android:background="@drawable/button"
        android:fontFamily="@font/soda"
        android:text="Mettre à Jour"
        android:textColor="@color/white"
        app:backgroundTint="@color/lred"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sexe"
        app:layout_constraintVertical_bias="0.732" />


</androidx.constraintlayout.widget.ConstraintLayout>